--- a/Gep13.WindowsPhone.Core/packages.config
+++ b/Gep13.WindowsPhone.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.3.1" />
+  <package id="SterlingPhone" version="1.5.0.1" targetFramework="sl40-wp71" />
   <package id="WP7TombstoneHelper" version="2.5" />
 </packages>
