--- a/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Caliburn.Micro" version="1.3.1" />
   <package id="SilverlightToolkitWP" version="4.2011.12.14" />
+  <package id="StyleCop.MSBuild" version="4.7.34.0" targetFramework="sl40-wp71" />
   <package id="YLAD" version="2.0.0" />
 </packages>
