Trying to get packages/repositories.config file to stop re-appearing all the time

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Gep13.WindowsMobile.VbfViewer.Client\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.Core.Tests\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.Core\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.BackgroundAgent\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.Client\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.Core.Tests\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.Core\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.Database\packages.config" />
+  <repository path="..\Gep13.WindowsPhone.VBForumsMetro.Models\packages.config" />
 </repositories>
