--- a/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.3.1" />
+  <package id="Ree7.WPTileToolkit" version="1.0.1" targetFramework="sl40-wp71" />
   <package id="SilverlightToolkitWP" version="4.2011.12.14" />
   <package id="StyleCop.MSBuild" version="4.7.34.0" targetFramework="sl40-wp71" />
   <package id="YLAD" version="2.0.0" />
