--- a/Gep13.WindowsPhone.VBForumsMetro.BackgroundAgent/Gep13.WindowsPhone.VBForumsMetro.BackgroundAgent.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.BackgroundAgent/Gep13.WindowsPhone.VBForumsMetro.BackgroundAgent.csproj
@@ -45,6 +45,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Phone" />
+    <Reference Include="Ree7.TileToolkit">
+      <HintPath>..\packages\Ree7.WPTileToolkit.1.0.1\lib\sl4-wp71\Ree7.TileToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
