--- a/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
@@ -53,7 +53,9 @@
   <ItemGroup>
     <Compile Include="BaseModel.cs" />
     <Compile Include="IBaseModel.cs" />
+    <Compile Include="LoginCredentialModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReputationModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
