--- a/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
+++ b/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
@@ -61,6 +61,7 @@
     <Reference Include="Microsoft.Phone.Interop">
       <HintPath>..\SharedBinaries\WP7Lib\Microsoft.Phone.Interop.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows">
       <HintPath>..\SharedBinaries\WP7Lib\System.Windows.dll</HintPath>
       <Private>False</Private>
