--- a/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Caliburn.Micro">
+      <HintPath>..\..\teamcitysharp.wp7\src\packages\Caliburn.Micro.1.3.1\lib\sl4-windowsphone71\Caliburn.Micro.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
