--- a/Gep13.WindowsPhone.VBForumsMetro.Models/packages.config
+++ b/Gep13.WindowsPhone.VBForumsMetro.Models/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="1.3.1" targetFramework="sl40-wp71" />
   <package id="StyleCop.MSBuild" version="4.7.34.0" targetFramework="sl40-wp71" />
 </packages>
