--- a/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
+++ b/Gep13.WindowsPhone.Core/Gep13.WindowsPhone.Core.csproj
@@ -61,7 +61,14 @@
     <Reference Include="Microsoft.Phone.Interop">
       <HintPath>..\SharedBinaries\WP7Lib\Microsoft.Phone.Interop.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.7\lib\sl4-windowsphone71\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpGIS.GZipWebClient">
+      <HintPath>..\packages\SharpGIS.GZipWebClient.1.2\lib\sl40-wp71\SharpGIS.GZipWebClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Windows">
       <HintPath>..\SharedBinaries\WP7Lib\System.Windows.dll</HintPath>
       <Private>False</Private>
@@ -103,6 +110,15 @@
     <Compile Include="Database\ISterlingService.cs" />
     <Compile Include="Diagnostics\DiagnosticsService.cs" />
     <Compile Include="Diagnostics\IDiagnosticsService.cs" />
+    <Compile Include="Helpers\IsolatedStorageHelper.cs" />
+    <Compile Include="Helpers\SerializationHelper.cs" />
+    <Compile Include="Http\HttpClient.cs" />
+    <Compile Include="Http\HttpException.cs" />
+    <Compile Include="Http\HttpRequest.cs" />
+    <Compile Include="Http\HttpResponse.cs" />
+    <Compile Include="Http\HttpService.cs" />
+    <Compile Include="Http\QueryString.cs" />
+    <Compile Include="Models\ApplicationSettings.cs" />
     <Compile Include="Navigation\INavigationHelperService.cs" />
     <Compile Include="Navigation\NavigationHelperService.cs" />
     <Compile Include="Progress\IProgressService.cs" />
