Reverted to using a single property for both the UserName and the Password.  Don't think the other way is going to work the way I want it to.

--- a/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
@@ -98,6 +98,7 @@
       <Name>Gep13.WindowsPhone.VBForumsMetro.Database</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <WindowsPhoneBuildResources>..\SharedBinaries\Build\MSBuild_WP7</WindowsPhoneBuildResources>
     <SilverlightBuildResources>..\SharedBinaries\Silverlight\v4.0</SilverlightBuildResources>
