--- a/Gep13.WindowsPhone.Core/packages.config
+++ b/Gep13.WindowsPhone.Core/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.3.1" />
+  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="sl40-wp71" />
+  <package id="SharpGIS.GZipWebClient" version="1.2" targetFramework="sl40-wp71" />
   <package id="SterlingPhone" version="1.5.0.1" targetFramework="sl40-wp71" />
   <package id="StyleCop.MSBuild" version="4.7.34.0" targetFramework="sl40-wp71" />
   <package id="WP7TombstoneHelper" version="2.5" />
