--- a/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
@@ -47,12 +47,23 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AsyncCtpLibrary_Phone">
+      <HintPath>..\..\..\Users\gep13\Documents\Microsoft Visual Studio Async CTP\Samples\AsyncCtpLibrary_Phone.dll</HintPath>
+    </Reference>
+    <Reference Include="Caliburn.Micro, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Caliburn.Micro.1.3.1\lib\sl4-windowsphone71\Caliburn.Micro.dll</HintPath>
+    </Reference>
+    <Reference Include="Caliburn.Micro.Extensions">
+      <HintPath>..\packages\Caliburn.Micro.1.3.1\lib\sl4-windowsphone71\Caliburn.Micro.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone">
       <HintPath>..\SharedBinaries\WP7Lib\Microsoft.Phone.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Controls">
       <HintPath>..\SharedBinaries\WP7Lib\Microsoft.Phone.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Phone.Reactive" />
+    <Reference Include="System.Observable" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows">
       <HintPath>..\SharedBinaries\WP7Lib\System.Windows.dll</HintPath>
@@ -65,6 +76,9 @@
     <Reference Include="System.Core">
       <HintPath>..\SharedBinaries\WP7Lib\System.Core.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Windows.Interactivity, Version=3.8.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Caliburn.Micro.1.3.1\lib\sl4-windowsphone71\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml">
       <HintPath>..\SharedBinaries\WP7Lib\System.Xml.dll</HintPath>
@@ -84,6 +98,9 @@
   <ItemGroup>
     <Compile Include="Database\VBForumsMetroSterlingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\IVBForumsWebService.cs" />
+    <Compile Include="Web\VBForumsWebService.cs" />
+    <Compile Include="Workers\VBForumsMetroViewModelWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -96,6 +113,10 @@
     <ProjectReference Include="..\Gep13.WindowsPhone.VBForumsMetro.Database\Gep13.WindowsPhone.VBForumsMetro.Database.csproj">
       <Project>{2EA7F823-D19F-4CE9-B277-5020D3B412AD}</Project>
       <Name>Gep13.WindowsPhone.VBForumsMetro.Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Gep13.WindowsPhone.VBForumsMetro.Models\Gep13.WindowsPhone.VBForumsMetro.Models.csproj">
+      <Project>{EE5DCBAE-8607-4445-9225-235715F92BA5}</Project>
+      <Name>Gep13.WindowsPhone.VBForumsMetro.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
