Added AsyncCTP DLL to SharedBinaries and updated references

--- a/Gep13.WindowsPhone.VBForumsMetro.Client/Gep13.WindowsPhone.VBForumsMetro.Client.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Client/Gep13.WindowsPhone.VBForumsMetro.Client.csproj
@@ -56,7 +56,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AsyncCtpLibrary_Phone, Version=1.1.4304.19911, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\Users\gep13\Documents\Microsoft Visual Studio Async CTP\Samples\AsyncCtpLibrary_Phone.dll</HintPath>
+      <HintPath>..\SharedBinaries\AsyncCTP\AsyncCtpLibrary_Phone.dll</HintPath>
     </Reference>
     <Reference Include="Caliburn.Micro">
       <HintPath>..\packages\Caliburn.Micro.1.3.1\lib\sl4-windowsphone71\Caliburn.Micro.dll</HintPath>
