Added a new ProfileModel class to hold all the information about the currently logged in user.

--- a/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Models/Gep13.WindowsPhone.VBForumsMetro.Models.csproj
@@ -64,6 +64,7 @@
     <Compile Include="BaseModel.cs" />
     <Compile Include="IBaseModel.cs" />
     <Compile Include="LoginCredentialModel.cs" />
+    <Compile Include="ProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReputationModel.cs" />
   </ItemGroup>
