--- a/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
+++ b/Gep13.WindowsPhone.VBForumsMetro.Core/Gep13.WindowsPhone.VBForumsMetro.Core.csproj
@@ -63,6 +63,7 @@
       <HintPath>..\SharedBinaries\WP7Lib\Microsoft.Phone.Controls.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Windows">
       <HintPath>..\SharedBinaries\WP7Lib\System.Windows.dll</HintPath>
       <Private>False</Private>
